# fcl

./: COPYING  ChangeLog  Changelog  HISTORY  Makefile.am  README  RoadMap  autoclean.sh  autogen.sh  config.h.in  configure.ac  libfcl.pc.in
doc/: fcl.doxygen
po/: POTFILES.in
src/: Makefile.am  fcl.c
src/include/: fcl.h
test/: Makefile.am  libfcltest.c  libfcltest.h
